# flappy_bird_ai_genetic_algorithm

./: .gitmodules  README.md  pyproject.toml
flappy_bird_ai/: main.py  playback.py  player.py  settings.py  simulator.py
